# IC_PINN_project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent_eval_results/: PETR4_SA_merged_eval.csv
data/: Ibovespa.csv  USD_BRL.csv
evaluation_results/: PETR4.SA_performance_report.html
models/: pinn_model.pkl  pinn_scaling_factors.json
pinn_eval_logs/: PETR4_SA_pinn_eval.csv
rl_logs/: PETR4_SA_training_log.csv  PETR4_SA_training_steps.csv  PETR4_SA_training_summary.csv
scripts/: create_db.py  debug_tickers.py  evaluate_agent.py  fetch_historical_data.py  import_cotahist_data.py  pinn_eval.py  schema.sql  train_initial_pinn.py  train_pinn_placeholder.py  train_rl_agent.py
src/autonomous_trading_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/trading_system/: config.py  main.py
tensorboard_logs/PPO_1/: events.out.tfevents.1757039342.rubloures.42464.0
tensorboard_logs/PPO_10/: events.out.tfevents.1757357746.rubloures.24300.0
tensorboard_logs/PPO_11/: events.out.tfevents.1757619381.rubloures.54588.0
tensorboard_logs/PPO_12/: events.out.tfevents.1757621737.rubloures.29944.0
tensorboard_logs/PPO_13/: events.out.tfevents.1757631243.rubloures.51976.0
tensorboard_logs/PPO_14/: events.out.tfevents.1757700244.rubloures.60424.0  events.out.tfevents.1757715165.rubloures.73412.0  events.out.tfevents.1757715176.rubloures.73412.1  (+168 more)
tests/: test_environment.py  test_features.py  test_pinn_handler.py  test_strategy.py
training_results/: PETR4_SA_steps_full.csv  PETR4_SA_summary.csv
(+55 files in other folders)
